// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioField > should render correctly checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-16 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-16[aria-disabled='false'],
.emotion-16[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 {
  fill: #8c40ef;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 .emotion-23 {
  fill: #e5dbfd;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 {
  fill: #b3144d;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 .emotion-23 {
  fill: #ffd3e3;
}

.emotion-16[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-16[aria-disabled='true']>label,
.emotion-16[aria-disabled='true'] .emotion-19 {
  cursor: not-allowed;
}

.emotion-16[aria-disabled='true'] .emotion-21 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-16[aria-disabled='true'] .emotion-21 .emotion-23 {
  fill: #f3f3f4;
}

.emotion-18 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-18+.emotion-21 .emotion-25 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-18:checked+svg .emotion-25 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-18:checked[aria-disabled='false'][aria-invalid='false']+.emotion-21 {
  fill: #8c40ef;
}

.emotion-18:checked[aria-disabled='true'][aria-invalid='false']+.emotion-21 {
  fill: #d8c5fc;
}

.emotion-18[aria-invalid='true']:not([aria-disabled='true'])+.emotion-21 {
  fill: #e51963;
}

.emotion-18[aria-disabled='false']:active+.emotion-21 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-18[aria-disabled='false']:active+.emotion-21 .emotion-23 {
  fill: #f1eefc;
}

.emotion-18[aria-disabled='false']:focus-visible+.emotion-21 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-18[aria-invalid='true']:focus+.emotion-21 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-18[aria-invalid='true']:focus+.emotion-21 .emotion-23 {
  fill: #ffebf2;
}

.emotion-20 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-20 .emotion-23 {
  fill: #ffffff;
}

.emotion-27 {
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <fieldset
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-3"
          >
            <div
              class="emotion-8 emotion-3"
            >
              <legend
                class="emotion-10 emotion-11"
              >
                Label 
              </legend>
            </div>
            <div
              class="emotion-12 emotion-3"
            >
              <div
                class="emotion-14 emotion-15"
              >
                <div
                  aria-disabled="false"
                  class="emotion-16 emotion-17"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="emotion-18 emotion-19"
                    id="«r1»"
                    name="radio"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="emotion-20 emotion-21"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="emotion-22 emotion-23"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="emotion-24 emotion-25"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="emotion-26 emotion-27 emotion-11"
                    for="«r1»"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="emotion-14 emotion-15"
              >
                <div
                  aria-disabled="false"
                  class="emotion-16 emotion-17"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="emotion-18 emotion-19"
                    id="«r4»"
                    name="radio"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="emotion-20 emotion-21"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="emotion-22 emotion-23"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="emotion-24 emotion-25"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="emotion-26 emotion-27 emotion-11"
                    for="«r4»"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`RadioField > should trigger events correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-16 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-16[aria-disabled='false'],
.emotion-16[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 {
  fill: #8c40ef;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19+.emotion-21 .emotion-23 {
  fill: #e5dbfd;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 {
  fill: #b3144d;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true']+.emotion-21 .emotion-23 {
  fill: #ffd3e3;
}

.emotion-16[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-16[aria-disabled='true']>label,
.emotion-16[aria-disabled='true'] .emotion-19 {
  cursor: not-allowed;
}

.emotion-16[aria-disabled='true'] .emotion-21 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-16[aria-disabled='true'] .emotion-21 .emotion-23 {
  fill: #f3f3f4;
}

.emotion-18 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-18+.emotion-21 .emotion-25 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-18:checked+svg .emotion-25 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-18:checked[aria-disabled='false'][aria-invalid='false']+.emotion-21 {
  fill: #8c40ef;
}

.emotion-18:checked[aria-disabled='true'][aria-invalid='false']+.emotion-21 {
  fill: #d8c5fc;
}

.emotion-18[aria-invalid='true']:not([aria-disabled='true'])+.emotion-21 {
  fill: #e51963;
}

.emotion-18[aria-disabled='false']:active+.emotion-21 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-18[aria-disabled='false']:active+.emotion-21 .emotion-23 {
  fill: #f1eefc;
}

.emotion-18[aria-disabled='false']:focus-visible+.emotion-21 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-18[aria-invalid='true']:focus+.emotion-21 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-18[aria-invalid='true']:focus+.emotion-21 .emotion-23 {
  fill: #ffebf2;
}

.emotion-20 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-20 .emotion-23 {
  fill: #ffffff;
}

.emotion-27 {
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <fieldset
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-3"
          >
            <div
              class="emotion-8 emotion-3"
            >
              <legend
                class="emotion-10 emotion-11"
              >
                RadioGroupField events 
              </legend>
            </div>
            <div
              class="emotion-12 emotion-3"
            >
              <div
                class="emotion-14 emotion-15"
              >
                <div
                  aria-disabled="false"
                  class="emotion-16 emotion-17"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="emotion-18 emotion-19"
                    id="«r8»"
                    name="test"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="emotion-20 emotion-21"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="emotion-22 emotion-23"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="emotion-24 emotion-25"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="emotion-26 emotion-27 emotion-11"
                    for="«r8»"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="emotion-14 emotion-15"
              >
                <div
                  aria-disabled="false"
                  class="emotion-16 emotion-17"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="emotion-18 emotion-19"
                    id="«rb»"
                    name="test"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="emotion-20 emotion-21"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="emotion-22 emotion-23"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="emotion-24 emotion-25"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="emotion-26 emotion-27 emotion-11"
                    for="«rb»"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
